--- a/epl-prophet-web/requirements.txt
+++ b/epl-prophet-web/requirements.txt
@@ -3,4 +3,6 @@ pandas==2.0.3
 numpy==1.24.3
 scikit-learn==1.3.0
 joblib==1.3.2
-gunicorn==21.2.0 
+gunicorn==21.2.0
+Frozen-Flask==1.0.0
+requests==2.31.0 
